--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		<div class="top-container">	
 			<img class="top-cloud" src="images/cloud.png" alt="cloud-img">
 			<h1><strong>I'm Aastha</strong></h1>
-			<h2>a programmer</h2>
+			<h2>A Programmer</h2>
 
 			<img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
 			<img src="images/mountain.png" alt="mountain-img">
 		</div>
 		<div class="middle-container">
 			<div class="profile">
-		    <img src="images/circle-cropped.png" style="width:180px;height:195px;">
+		    <img src="images/circle-cropped.png" style="width:60%;height:30vh;">
 		    <h2>Hello!</h2>
 		    <p class="intro">I am a 1st year undergraduate at IIIT-Allahabad, a beginner at competitive programmer and web development.</p>
 		  	</div> </br>
