--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="profile">
 		    <img src="images/circle-cropped.png" style="width:180px;height:195px;">
 		    <h2>Hello!</h2>
-		    <p class="intro">I am a 1st year undergraduate at IIIT-Allahabad, a beginner at competitive programmer and web development.</p>
+		    <p class="intro">I am a 3rd year undergraduate at IIIT-Allahabad, a beginner at competitive programmer and web development.</p>
 		  	</div> </br>
 		  <hr>
 		  
