--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="profile">
 		    <img src="images/circle-cropped.png" style="width:180px;height:195px;">
 		    <h2>Hello!</h2>
-		    <p class="intro">I am a 3rd year undergraduate at IIIT-Allahabad, a beginner at competitive programmer and web development.</p>
+		    <p class="intro">I am a 3rd year undergraduate at IIIT-Allahabad, a competitive programmer and web developer.</p>
 		  	</div> </br>
 		  <hr>
 		  
@@ -33,7 +33,7 @@
 			</br>
 			    <div class="skill-row">
 			      <img class="developer-img" src="images/developer.png" style="width:180px;height:180px;"  alt="">
-			      <h3>Noob Developer</h3>
+			      <h3>Web Developer</h3>
 			      <p>Exploring interests in the field of web development.</p>
 			    </div>
 		  </div>
